--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,6 +8,9 @@ main:
   #   url: tour
     # weight: 10
   - name: News
+    url: news
+    weight: 20
+  - name: Posts
     url: post
     weight: 20
   - name: People
